# python-gtts-sample

./: README.md  pyproject.toml
ex_gtts/: __main__.py
tests/: test_ex_gtts.py
