[tool.poetry]
name = "ex-gtts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
gTTS = "^2.2.3"
python-openal = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
